--- a/BasePagWEB/css/style.css
+++ b/BasePagWEB/css/style.css
@@ -32,7 +32,6 @@ h1{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 20px 0;
 }
 .input-box{
   display: flex;
@@ -43,16 +42,19 @@ h1{
 .input-box:nth-child(2n){
   justify-content: end;
 }
-.input-box label, .gender-title{
+.input-box label, .gender-title, .data-nascita{
   width: 95%;
   color: black;
   font-weight: bold;
   margin: 5px 0;
 }
-.gender-title{
+.gender-title, .data-nascita{
+  margin-top: 5px;
   font-size: 16px;
 }
-
+h3{
+  font-size: 16px;
+}
 .input-box input{
   height: 40px;
   width: 95%;
@@ -66,6 +68,7 @@ h1{
 }
 .gender-choice{
   color: black;
+  margin: 5px;
 }
 .gender-choice label{
   padding: 0 20px 0 5px;
@@ -81,7 +84,7 @@ h1{
   border: 2px solid #1A1A1A;
   border-radius: 15px;
   box-sizing: border-box;
-  color: #3B3B3B;
+  color: black;
   cursor: pointer;
   display: inline-block;
   /*font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";*/
@@ -131,6 +134,12 @@ h1{
 h2{
   color: white;
 }
+.eta{
+  margin: 5px;
+}
+
+/* PARTE RESPONSIVE */
+
 @media(max-width: 600px){
   .container{
     min-width: 280px;
